agency-jekyll-theme-gh-pages/_includes/css/agency.css
/* ... */
section#contact .subject-inline-input::placeholder {
    color: #8b919d;
}

section#contact .message-inline-textarea {
    border: 0 !important;
}

section#contact .char-counter {
    position: absolute;
    right: 12px;
    bottom: 10px;
    font-size: 11px;
    color: #8b9098;
    line-height: 1;
    pointer-events: none;
    z-index: 3;
    opacity: 0;
    transition: opacity 0.18s ease;
}

section#contact .char-counter.textarea-counter {
    bottom: 10px;
}

section#contact .textarea-wrap:focus-within .char-counter.textarea-counter,
section#contact .char-counter.textarea-counter.has-value {
    opacity: 0.55;
}

section#contact .form-control:focus {
    border-color: #f0f0f0;
    box-shadow: none;
}

section#contact .form-control::placeholder {
    color: #8d939c;
    font-size: 14px;
    font-weight: 400;
}

section#contact .message-box:focus-within {
    border-color: #f0f0f0;
}

section#contact .contact-submit {
    margin-top: 2px;
    background: #0f0f10;
    border-color: #0f0f10;
    color: #fff;
    border-radius: 0;
    min-width: 150px;
    padding: 14px 40px;
    text-transform: none;
    font-size: 16px;
    position: relative;
    overflow: visible;
}

section#contact .contact-actions {
    text-align: center;
    padding-top: 26px;
}

section#contact .contact-submit:hover,
section#contact .contact-submit:focus,
section#contact .contact-submit:active {
    background: #18191b;
    border-color: #18191b;
    color: #fff;
}

section#contact .help-block {
    margin: 4px 0 0;
    font-size: 13px;
    color: #ff8f8f !important;
}

section#contact .help-block:empty {
    display: none;
}

section#contact .has-error .form-control,
section#contact .form-control.error {
    border-color: #ff8f8f;
}

@media(max-width:991px) {
    section#contact .section-heading {
        margin-bottom: 56px;
    }

    section#contact .contact-intro {
        margin-bottom: 32px;
        font-size: 16px;
    }

    section#contact .contact-form {
        padding: 18px 12px 14px;
    }

    section#contact textarea.form-control {
        min-height: 150px;
        height: 150px;
    }
}

@media(min-width:992px) {
    section#contact .contact-split {
        display: flex;
        align-items: flex-start;
        flex-wrap: wrap;
    }

    section#contact .contact-message-col {
        display: block;
        padding-left: 12px;
        margin-top: 28px;
    }

    section#contact .contact-stack {
        padding-right: 12px;
    }

    section#contact .contact-message-col .form-group {
        display: block;
        height: auto;
        width: auto;
    }

    section#contact .contact-message-col .textarea-wrap {
        flex: none;
    }

    section#contact .contact-message-col textarea.form-control {
        height: 180px;
        min-height: 180px;
    }

    section#contact .contact-stack .form-group:last-child,
    section#contact .contact-message-col .form-group:last-child {
        margin-bottom: 0;
    }

    section#contact .contact-actions {
        width: 100%;
    }

    section#contact .contact-actions {
        text-align: center;
    }
}

header {
    text-align: center;
    color: #fff;
    background-attachment: scroll;
    background-image: url('img/tapeheader2.jpg');
    background-position: center center;
    background-repeat: none;
    -webkit-background-size: cover;
    -moz-background-size: cover;
    background-size: cover;
    -o-background-size: cover;
}
footer {
    padding: 12px 0;
    text-align: center;
    background-color: var(--clr-bg-light);
    border-top: 1px solid rgba(34,34,34,.08);
}

footer .container {
    width: 100%;
    max-width: 860px;
    padding-left: 35px;
    padding-right: 35px;
}

footer .footer-meta {
    position: relative;
    min-height: 42px;
    --footer-center-offset: clamp(120px, 18vw, 190px);
}

footer span.copyright {
    display: inline-block;
    line-height: 1.45;
    font-family: {{ site.data.template.font.primary }};
    text-transform: none;
    position: absolute;
    left: calc(50% - var(--footer-center-offset));
    top: 50%;
    transform: translate(-50%, -50%);
    text-align: center;
}

footer ul.quicklinks {
    margin-bottom: 0;
    font-family: {{ site.data.template.font.primary }};
    line-height: 42px;
}

footer ul.quicklinks li a {
    color: var(--clr-text-on-light);
}

footer ul.quicklinks li a:hover,
footer ul.quicklinks li a:focus,
footer ul.quicklinks li a:active {
    color: #000;
}

ul.social-buttons {
    margin-bottom: 0;
    margin-top: 0;
    min-height: 42px;
    display: flex;
    align-items: center;
    justify-content: center;
}

footer ul.social-buttons {
    position: absolute;
    left: calc(50% + var(--footer-center-offset));
    top: 50%;
    transform: translate(-50%, -50%);
    margin-left: 0;
    margin-right: 0;
    padding-left: 0;
    justify-content: center;
}

footer ul.social-buttons li {
    padding-left: 0;
    padding-right: 0;
}

ul.social-buttons li a {
    display: inline-flex;
    align-items: center;
    justify-content: center;
    width: 40px;
    height: 40px;
    border-radius: 100%;
    font-size: 20px;
    line-height: 1;
    outline: 0;
    color: #fff;
    background-color: var(--clr-bg-dark);
    -webkit-transition: all .3s;
    -moz-transition: all .3s;
    transition: all .3s;
}

ul.social-buttons li a .fa {
    line-height: 1;
}

ul.social-buttons li a:hover,
ul.social-buttons li a:focus,
ul.social-buttons li a:active {
    background-color: var(--clr-accent);
}
/* ... */

